Feat: Update answers

--- a/06_클래스와 구조체를 사용하는 이유를 나열하고 객체지향 프로그래밍의 네 가지 특징을 설명합니다.md
+++ b/06_클래스와 구조체를 사용하는 이유를 나열하고 객체지향 프로그래밍의 네 가지 특징을 설명합니다.md
@@ -1,4 +1,16 @@
 ## 클래스와 구조체를 사용하는 이유를 나열하고 객체지향 프로그래밍의 네 가지 특징을 설명합니다.
 
-```swift
-```
+- 동일한 속성의 데이터들을 하나로 묶어서 관리하기 위해 사용한다.
+- OOP의 특징으로는 캡슐화, 상속, 추상화, 다형성으로 네 가지가 있다.
+    - 캡슐화: 서로 연관있는 속성과 기능을 하나의 캡슐로 만들어 데이터를 외부로부터 보호하는 것
+        - 데이터 보호: 외부로부터 클래스에 정의된 속성들과 기능들을 보호하는 것
+        - 데이터 은닉: 내부의 동작을 감추고 외부에는 필요한 부분만 노출시키는 것
+    - 상속: 기존의 클래스를 재활용하여 새로운 클래스를 작성하는 것
+        - 클래스 간 공유될 수 있는 속성과 기능들을 상위 클래스로 추상화시켜 해당 상위 클래스로부터 확장된 여러 개의 하위 클래스들이 모두 상위 클래스의 속성과 기능들을 간편하게 사용할 수 있도록 하는 것
+        - 클래스 간 공유하는 속성과 기능들을 한 번만 정의한 후 재사용이 가능하여 반복적인 코드를 최소화 및 공유하는 속성들에 대한 접근이 간편해짐!
+    - 추상화: 공통성과 본질을 모아 추출하는 것. 객체의 공통적인 속성과 기능을 추출하여 정의하는 것(예: 지하철 노선도)
+    - 다형성: 객체의 속성이나 기능이 상황(맥락)에 따라 여러 가지 형태를 가질 수 있는 것
+        - 메서드 오버라이딩(재정의)
+        - 메서드 오버로딩(과적)
+
+[코드스테이츠 - 객체 지향 프로그래밍 특징](https://www.codestates.com/blog/content/%EA%B0%9D%EC%B2%B4-%EC%A7%80%ED%96%A5-%ED%94%84%EB%A1%9C%EA%B7%B8%EB%9E%98%EB%B0%8D-%ED%8A%B9%EC%A7%95)
